--- a/application/views/Ludo-game.hbs
+++ b/application/views/Ludo-game.hbs
@@ -101,12 +101,9 @@
             <div class="pawns" id="bluepawn3" onclick="randomMove('blue',3)" style="background-color:blue;top:505px;left:550px;"></div>
             <div class="pawns" id="bluepawn4" onclick="randomMove('blue',4)" style="background-color:blue;top:599px;left:550px;"></div>
 
-
-            <h4 id="uselesstext1">It`s </h4>
-            <h3 id="player" style="float:left; color:red">red</h3>
-            <h4 id="uselesstext2">s turn</h4>
-            <p id="badtext" style="float:left;"></p>
-        </div>
-        <!--<footer title="Copyright by Slavi Koen" id="copyright">FOR ME</footer>-->
-    </body>
+    <h4 id="uselesstext1" style="padding-top: 1%">It`s </h4><h3 id="player" style="float:left; color:red">red</h3><h4 id="uselesstext2" style="padding: 1.75%">'s turn</h4>
+    <p id="badtext" style="float:left;"></p>
+    </div>
+    <!--<footer title="Copyright by Slavi Koen" id="copyright">FOR ME</footer>-->
+</body>
 </html>
