added services for playing ludo game,remove favicon icon,added gameboard name on the home page

--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -136,6 +136,7 @@
                     {{#each gameBoard}}
                         <section class="tiles">
                             <p>CreatedBy <b>{{name}}</b></p>
+                            <p>Board Name <b>{{board_name}}</b></p>
                             <p>{{number_of_players}} players joined</p>
                             <button type="button" name="button" id = "btnJoin" onclick="joinGame({{id}})" class="join">Join</button>
                         </section>
