--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -5,7 +5,7 @@
         <title>Ludo Game - Home</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-        <script defer src="http://localhost:80/socket.io/socket.io.js"></script>
+	<script defer src="http://ec2-18-191-136-71.us-east-2.compute.amazonaws.com/socket.io/socket.io.js"></script>
         <script defer src="js/socketScript.js"></script>
         <script>
             var loggedInId = '';
