chat design changes

--- a/application/views/Ludo-game.hbs
+++ b/application/views/Ludo-game.hbs
@@ -84,7 +84,6 @@
                 color:darkred;
             }
             #message-container {
-              width: 40%;
               max-width: 1200px;
             }
 
@@ -193,7 +192,7 @@
             <input type="hidden" id="player3" name="player3" value="{{player3}}">
             <input type="hidden" id="player4" name="player4" value="{{player4}}"> -->
 
-            <div style="float:left;width:40%">
+            <div style="float:left;width:39%;overflow-y:scroll;height:350px;">
               <div id="message-container"></div>
               <form id="send-container">
                 <input type="text" id="message-input">
