--- a/application/views/Ludo-game.hbs
+++ b/application/views/Ludo-game.hbs
@@ -156,10 +156,10 @@
             <div class="pawns" id="redpawn4" onclick="randomMove('red',4)" style="background-color:red;top:203px;left:598px;"></div>
 
             <!-- yellow pawns  start top 523 left 218-->
-            <div class="pawns" id="yellowpawn1" onclick="randomMove('yellow',1)" style="background-color:yellow;top:552px;left:155px;"></div>
-            <div class="pawns" id="yellowpawn2" onclick="randomMove('yellow',2)" style="background-color:yellow;top:552px;left:248px;"></div>
-            <div class="pawns" id="yellowpawn3" onclick="randomMove('yellow',3)" style="background-color:yellow;top:505px;left:201px;"></div>
-            <div class="pawns" id="yellowpawn4" onclick="randomMove('yellow',4)" style="background-color:yellow;top:599px;left:201px;"></div>
+            <div class="pawns" id="yellowpawn1" onclick="randomMove('yellow',1)" style="background-color:darkgoldenrod;top:552px;left:155px;"></div>
+            <div class="pawns" id="yellowpawn2" onclick="randomMove('yellow',2)" style="background-color:darkgoldenrod;top:552px;left:248px;"></div>
+            <div class="pawns" id="yellowpawn3" onclick="randomMove('yellow',3)" style="background-color:darkgoldenrod;top:505px;left:201px;"></div>
+            <div class="pawns" id="yellowpawn4" onclick="randomMove('yellow',4)" style="background-color:darkgoldenrod;top:599px;left:201px;"></div>
 
             <!-- green pawns  start top 227 left 22-->
             <div class="pawns" id="greenpawn1" onclick="randomMove('green',1)" style="background-color:green;top:250px;left:201px;"></div>
