--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -6,6 +6,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	      <script defer src="http://ec2-18-191-136-71.us-east-2.compute.amazonaws.com/socket.io/socket.io.js"></script>
+        <!-- <script defer src="http://localhost/socket.io/socket.io.js"></script> -->
         <script defer src="js/socketScript.js"></script>
         <script>
             var loggedInId = '';
@@ -51,10 +52,19 @@
                 }
             }
 
+            function hostGame()
+            {
+              if(loggedInId) {
+                $('#createBoardModal').modal('show');
+              }
+              else {
+                $('#hdnFlag').val(true);
+                $('#loginModal').modal('show');
+              }
+            }
             <!-- Create game board -->
             function createGame() {
               var boardName = $('#boardName').val();
-                if(loggedInId) {
                     $.ajax({
                         url : '/create_board',
                         type: 'post',
@@ -68,11 +78,6 @@
                             alert("Error on joining game credentials");
                         }
                     });
-                }
-                else {
-                    $('#hdnFlag').val(true);
-                    $('#loginModal').modal('show');
-                }
             }
         </script>
         <link rel="stylesheet" href="css/master.css">
@@ -131,11 +136,11 @@
                 </div>
             </section>
             <section id="createGame">
-                <button type="button" name="button" data-toggle="modal" data-target="#createBoardModal" class="host">Host a game</button>
+                <button type="button" name="button" data-toggle="modal" onclick="hostGame()" class="host">Host a game</button>
                 <div class="gridTiles">
                     {{#each gameBoard}}
                         <section class="tiles">
-                            <p>CreatedBy <b>{{name}}</b></p>
+                            <p>Created By <b>{{name}}</b></p>
                             <p>Board Name <b>{{board_name}}</b></p>
                             <p>{{number_of_players}} players joined</p>
                             <button type="button" name="button" id = "btnJoin" onclick="joinGame({{id}})" class="join">Join</button>
