Added code to show Win Percentage on index and leaderboard page

--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -123,10 +123,10 @@
                 </header>
                 <div class="pointTable">
                     <div class="entry"><b>Name</b></div>
-                    <div class="entry"><b>Points</b></div>
+                    <div class="entry"><b>Win Percentage</b></div>
                     {{#each leaderBoard}}
                         <div class="entry">{{name}}</div>
-                        <div class="entry">{{point}}</div>
+                        <div class="entry">{{winPercentage}}</div>
                     {{/each}}
                 </div>
             </section>
