--- a/application/views/leaderboard.hbs
+++ b/application/views/leaderboard.hbs
@@ -61,7 +61,7 @@
                                             <td>{{name}}</td>
                                             <td>{{point}}</td>
                                             <td>{{totalGame}}</td>
-                                            <td>-</td>
+                                            <td>{{winPercentage}}</td>
                                         </tr>
                                       {{/each}}
         								            </tbody>
